<resources>
    <string name="app_name">Net Flow</string>

    <string-array name="time_frames">
        <item name="past_7_days">Weekly Flow</item>
        <item name="past_30_days">Monthly Flow</item>
        <item name="past_90_days">Quarterly Flow</item>
        <item name="past_180_days">Half Yearly Flow</item>
        <item name="past_365_days">Yearly Flow</item>
        <item name="all_time">Daily Flow</item>
    </string-array>

    <string name="time_frame_desc">Time frame slider toggle.</string>
    <string name="add_log_header">ADD LOG</string>
    <string name="edit_log_header">CANCEL EDIT</string>
    <string name="save">Save</string>
    <string name="gain">Gain</string>
    <string name="loss">Loss</string>
    <string name="empty_error">Field can\'t be empty</string>
    <string name="zero_error">Field can\'t be zero</string>
    <string name="delete_confirmation_header">Delete Log from %s</string>
    <string name="delete_confirmation_body">This can\'t be undone. Remove log?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string-array name="months">
        <item name="january">January</item>
        <item name="february">February</item>
        <item name="march">March</item>
        <item name="april">April</item>
        <item name="may">May</item>
        <item name="june">June</item>
        <item name="july">July</item>
        <item name="august">August</item>
        <item name="september">September</item>
        <item name="october">October</item>
        <item name="november">November</item>
        <item name="december">December</item>
    </string-array>

    <plurals name="day_extension">
        <item quantity="zero">%sst</item>
        <item quantity="one">%snd</item>
        <item quantity="two">%snd</item>
        <item quantity="other">%sth</item>
    </plurals>

    <plurals name="totalLogsInTimeFrame">
        <item quantity="one">%d Log</item>
        <item quantity="other">%d Logs</item>
    </plurals>

    <plurals name="week">
        <item quantity="one">Past Week: %s</item>
        <item quantity="other">%d Weeks Ago: %s</item>
    </plurals>

    <plurals name="quarter">
        <item quantity="one">Past Quarter: %s</item>
        <item quantity="other">%d Quarters Ago: %s</item>
    </plurals>

    <plurals name="half">
        <item quantity="one">Past Half: %s</item>
        <item quantity="other">%d Halves Ago: %s</item>
    </plurals>

    <string name="timestamp_format">yyyy/MM/dd HH:mm</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="copied">copied.</string>
    <string name="added">added.</string>
    <string name="addLogError">Error creating log.</string>
    <string name="logUpdated">Log updated.</string>
    <string name="logFailedUpdate">Log failed to update.</string>
    <string name="deleteSuccess">Log deleted.</string>
    <string name="deleteFailed">Failed to delete log.</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="note_optional">Note (Optional)</string>
    <string name="edit">EDIT</string>
    <string name="average">Average: %s</string>
    <string name="drop_down_button_for_time_frames">Drop down button for time frames</string>
    <string name="drop_down_menu_to_select_time_frame">Click to release menu to select time frame</string>

    <string name="netFlowMainChannel">net_flow_main_channel</string>
    <string name="channel_description">Reminder to add logs of the day</string>
    <string name="channel_name">Net Flow</string>
    <string name="channel_id">net_flow_channel</string>
    <string name="notification_body">Remember to keep track of your net flow today.</string>
    <string name="reminder">Reminder</string>

</resources>
