<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/add_log_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/add_log_btn_height"
        android:background="@drawable/btn_add_log"
        android:text="@string/add_log_header"
        android:textColor="@color/whitest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/gradient_add_log_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/add_log_background"
        android:orientation="vertical">

        <EditText
            android:id="@+id/enter_amount_edit_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_money"
            android:drawableStart="@drawable/custom_ic_money"
            android:gravity="start"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/enter_amount"
            android:inputType="numberDecimal"
            android:nextFocusDown="@id/addPurposeInput"
            android:padding="8dp" />

        <EditText
            android:id="@+id/addPurposeInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/input_note"
            android:drawableStart="@drawable/custom_ic_description"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/note_optional"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:padding="8dp"
            android:shadowColor="@color/black"
            android:textCursorDrawable="@color/black" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonLoss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_loss"
                android:drawableStart="@drawable/ic_trending_down"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/loss"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/whitest"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/buttonGain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_gain"
                android:drawableStart="@drawable/ic_trending_up"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/gain"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/whitest"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:weightSum="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_delete"
                android:drawableStart="@drawable/ic_delete"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/delete"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/whiter"
                android:visibility="invisible"
                android:layout_weight="1"
                android:textSize="22sp"/>

            <Button
                android:id="@+id/duplicateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_copy"
                android:drawableStart="@drawable/ic_duplicate"
                android:drawablePadding="5dp"
                android:padding="10dp"
                android:text="@string/copy"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/whiter"
                android:visibility="invisible"
                android:textSize="22sp" />

    </LinearLayout>
</LinearLayout>

</LinearLayout>