<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/addLogFade1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/addLogBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_log_btn" />

    <Button
        android:id="@+id/add_log_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/add_log_btn_height"
        android:background="@drawable/btn_add_log"
        android:text="@string/add_log_header"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonLoss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_loss"
        android:drawableStart="@drawable/ic_trending_down"
        android:drawableEnd="@drawable/ic_trending_down"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/loss"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonGain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_gain"
        android:drawableStart="@drawable/ic_trending_up"
        android:drawableEnd="@drawable/ic_trending_up"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/gain"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/btn_white"
        android:drawableStart="@drawable/ic_delete"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/delete"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addPurposeLayout" />

    <Button
        android:id="@+id/duplicateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/btn_white"
        android:drawableStart="@drawable/ic_duplicate"
        android:drawablePadding="5dp"
        android:padding="10dp"
        android:text="@string/copy"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addPurposeLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addPurposeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/note_optional"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterAmountLayout" >

        <EditText
            android:id="@+id/addPurposeInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_money"
            android:drawableStart="@drawable/custom_ic_description"
            android:ems="10"
            android:gravity="start"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:padding="8dp"
            android:shadowColor="@color/primaryText"
            android:textCursorDrawable="@color/primaryText"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enterAmountLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_amount"
        app:layout_constraintBottom_toTopOf="@id/addPurposeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_log_btn">

        <EditText
            android:id="@+id/enter_amount_edit_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_money"
            android:drawableStart="@drawable/custom_ic_money"
            android:gravity="start"
            android:inputType="numberDecimal"
            android:nextFocusDown="@id/addPurposeInput"
            android:padding="8dp" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>